# Lie-Detector

./: .env.example  .gitignore  CODEX_LOG.md  Makefile  README.md  RUN_GUIDE.md  SECURITY.md  pyproject.toml
demo/toy_repo/: README.md  pyproject.toml
demo/toy_repo/toylib/: __init__.py
liedetector/: __init__.py  adjudicate.py  classify.py  cli.py  executor.py  extract.py  llm.py  models.py  receipt.py  refine.py  report.py  synthesize.py  utils.py
liedetector/prompts/: extract-v1.txt  harness-v1.txt
tests/: conftest.py  test_adjudicate.py  test_classify_refine.py  test_cli.py  test_e2e_demo.py  test_executor.py  test_extract.py  test_fixtures.py  test_llm.py  test_models.py  test_pipeline.py  test_providers.py  test_receipt.py  test_synthesize.py  test_utils.py
