[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "liedetector"
version = "0.1.0"
description = "Turn READMEs into tests: verify factual claims in a repository's README with executable harnesses."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "anthropic>=0.117.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
liedetector = "liedetector.cli:main"

[tool.setuptools.packages.find]
include = ["liedetector*"]

[tool.setuptools.package-data]
liedetector = ["prompts/*.txt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: tests that require a working Docker daemon",
    "llm: tests that require a live Anthropic API credential",
]
